# jazz-neural-network

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
rnn/: __init__.py  train_model.py
rnn/model/: __init__.py  chord_model.py  layers.py  melody_model.py
rnn/music/: __init__.py  _chord_utils.py  _key_utils.py  _note_utils.py  musical_elements.py  song.py  utils.py
rnn/prediction/: __init__.py  beam_search.py  beam_search_candidate.py  greedy_search.py  input_creator.py  prediction_pipeline.py
rnn/training/: __init__.py  training_pipeline.py
rnn/training/configs/harmony/: harmony_model_basic_config.yml
rnn/training/configs/melody/: melody_model_basic_config.yml
tests/unit/: test_musical_elements.py  test_song.py
