[tool.poetry]
name = "jazz-neural-network"
version = "0.1.0"
description = ""
authors = ["Florian Holl <florian.holl@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
pandas = "^1.4.3"
music21 = "^7.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
