[tool.poetry]
name = "jazz-neural-network"
version = "0.1.0"
description = ""
authors = ["Florian Holl <florian.holl@posteo.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.2"
pandas = "^1.4.3"
music21 = "^7.3.3"
bs4 = "^0.0.1"
lxml = "^4.9.1"
pytest = "^7.1.2"
tensorflow = "^2.9.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
